[gd_scene load_steps=4 format=3 uid="uid://bkqvyssqmhrfv"]

[ext_resource type="Script" path="res://scenes/LocationCombatPreparationDisplay.gd" id="1_q3oq4"]
[ext_resource type="PackedScene" uid="uid://cbvd7csy0ykuu" path="res://scenes/CombatantInfoDisplaySmall.tscn" id="2_4r7f4"]
[ext_resource type="PackedScene" uid="uid://44d3xexodsmw" path="res://scenes/CombatPreparationCombatantSlot.tscn" id="3_pp06a"]

[node name="LocationsDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3oq4")

[node name="AvailableCombatants" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.335
anchor_right = 1.0
anchor_bottom = 0.901
offset_left = -1.0
offset_top = -0.0800018
offset_bottom = 0.151978
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="AvailableCombatants"]
layout_mode = 2
columns = 5

[node name="Control" parent="AvailableCombatants/GridContainer" instance=ExtResource("2_4r7f4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" parent="AvailableCombatants/GridContainer" instance=ExtResource("2_4r7f4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Validate" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.918
anchor_top = 0.898
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.536011
offset_top = 0.0959473
grow_horizontal = 0
grow_vertical = 0
text = "Validate"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.315
offset_bottom = -40.12
grow_horizontal = 2

[node name="VSplitContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FrontRowContainer" type="HBoxContainer" parent="MarginContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VSplitContainer/FrontRowContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Front Row"

[node name="CombatantSlot" parent="MarginContainer/VSplitContainer/FrontRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot2" parent="MarginContainer/VSplitContainer/FrontRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot3" parent="MarginContainer/VSplitContainer/FrontRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot4" parent="MarginContainer/VSplitContainer/FrontRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot5" parent="MarginContainer/VSplitContainer/FrontRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="BackRowContainer" type="HBoxContainer" parent="MarginContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="MarginContainer/VSplitContainer/BackRowContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back Row"

[node name="CombatantSlot5" parent="MarginContainer/VSplitContainer/BackRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot6" parent="MarginContainer/VSplitContainer/BackRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot7" parent="MarginContainer/VSplitContainer/BackRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot8" parent="MarginContainer/VSplitContainer/BackRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2

[node name="CombatantSlot9" parent="MarginContainer/VSplitContainer/BackRowContainer" instance=ExtResource("3_pp06a")]
layout_mode = 2
